--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit
-onnxruntime
-tensorflow==2.15.0
-opencv-python-headless==4.8.1.78
-Pillow
-numpy==1.26.4
+ultralytics
+tensorflow
+opencv-python-headless
+pillow
+numpy
+matplotlib
